--- a/Solana-Group-7/src/main/resources/templates/Home.html
+++ b/Solana-Group-7/src/main/resources/templates/Home.html
@@ -891,12 +891,12 @@ button:active {
          const provider = window.solana;
          if (provider.isPhantom) {
            let pro = provider.isPhantom
-           console.log("Is Phantom installed?  ", provider.isPhantom);
-         
+           console.log("Is Phantom installed?  ", provider.isPhantom);  
            return provider;
          }
        } else {
          document.write('Install https://www.phantom.app/');
+         location.href= "https://www.phantom.app/";
        }
      };
 
