--- a/Solana-Group-7/src/main/resources/templates/Login.html
+++ b/Solana-Group-7/src/main/resources/templates/Login.html
@@ -450,7 +450,7 @@ input:valid {
 
                         <div class="col-md-12 mt-1 text-center">
 
-                          <h4 style="font-size: 13px;" class="text-white-50 text-center mt-3">Don't have an account? <a href="" class="text-primary" style="text-decoration: none; ">Register Now </a></h4>
+                          <h4 style="font-size: 13px;" class="text-white-50 text-center mt-3">Don't have an account? <a href="/signUp" class="text-primary" style="text-decoration: none; ">Register Now </a></h4>
 
                         </div>
 
