--- a/Solana-Group-7/src/main/resources/templates/SignUp.html
+++ b/Solana-Group-7/src/main/resources/templates/SignUp.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap"
         rel="stylesheet">
     <style>
@@ -467,6 +468,7 @@
             </div>
         </nav>
         <article>
+        
             <div class="d-flex align-content-center justify-content-center p-5  text-white fs-3"> Sign Up </div>
             <div class="container">
                 <div class="row p-5 ">
@@ -474,7 +476,7 @@
                         <p class=" text-white ">Sign-up With Social</p>
                         <div class="d-flex justify-content-between">
                             <button class="btn btn-outline-info w-100 p-3 me-2 "  style="font-size : 30px; width: 100%; height: 70px;"> <i class="bi-google"></i>  Google</button>
-                            <button class="btn btn-outline-info w-100 "  style="font-size : 30px; width: 100%; height: 70px;">Google</button>
+                            <button class="btn btn-outline-info w-100 "  style="font-size : 30px; width: 100%; height: 70px;"><i class="bi bi-facebook me-2"></i>FaceBook</button>
 
                         </div>
 
@@ -482,28 +484,29 @@
                     <div class="col-12 mt-5 ">
                         <p class=" text-white ">Or Sign-Up With Email</p>
                         <hr >
+                        <form action="/doSign" method="post">
                         <div class="p-5 pt-0">
                             <div class="mb-3 ">
-                                <label for="exampleFormControlInput1" class="form-label text-white">Email</label>
+                                <label for="exampleFormControlInput1" class="form-label text-center text-white">Your Email</label>
                                 <input type="text" class="form-control input text-white" id="exampleFormControlInput1"
-                                    placeholder="Nguyen ">
+                                    placeholder="abc@gmail.com ">
                             </div>
                         
                             <label class="py-3 d-flex flex-wrap justify-content-between">
                                 <div>
-                                    <input type="checkbox" required="" class="d-inline">
-                                    <span class="label-body fw-medium text-white">Remember Me</span>
+                              
                                 </div>
 
                                 <div id="passwordHelpBlock" class="form-text ">
-                                    <a href="#" class="text-primary fw-medium"> Lost Your Password?</a>
+                                    <a href="#" class="text-primary fw-medium">Already have ?</a>
                                 </div>
                             </label>
                             <div class="d-grid my-3">
-                                <button href="#" class="btn border-0 rounded  btn-medium"
+                                <button role="submit"  class="btn border-0 rounded  btn-medium"
                                     style="background: linear-gradient(rgb(104 71 245), rgb(169 91 243)); height: 70px;">Sign
                                     Up</button>
                             </div>
+                            </form>
                         </div>
 
 
