--- a/Solana-Group-7/src/main/resources/templates/Admin.html
+++ b/Solana-Group-7/src/main/resources/templates/Admin.html
@@ -451,8 +451,9 @@ font-size: 20px;
                   <div class="card-img"><button class="red-btn button">ADVERTISEMENT</button> </div>
                     <div class="card-info">
                       <div class="card-text">
-                        <p class="text-title">This is a title</p>
-                        <p class="text-subtitle">This is a subtitle</p>
+                        <p class="text-title">This is AD Manament</p>
+                        
+                         <a style="text-decoration: none;" href="/admin/ad"><p class="text-subtitle">Click to Start</p></a>
                       </div>
                       <div class="card-icon">
                         <svg viewBox="0 0 28 25" class="icon">
