--- a/Solana-Group-7/src/main/resources/templates/QLAccount.html
+++ b/Solana-Group-7/src/main/resources/templates/QLAccount.html
@@ -536,7 +536,7 @@ input:valid {
         value="Admin"
         class="d-inline"
     />
-    <p class="text">Designer</p>
+    <p class="text">Admin</p>
 </label>
 
 <label class="label">
@@ -551,7 +551,7 @@ input:valid {
          th:checked="*{role == 'User'}"
        
     />
-    <p class="text">Student</p>
+    <p class="text">User</p>
 </label>
 
   </div>
