--- a/Solana-Group-7/src/main/resources/templates/Home.html
+++ b/Solana-Group-7/src/main/resources/templates/Home.html
@@ -378,7 +378,7 @@ input:-webkit-autofill:active {
 }
 
 .card11 {
-  width: 300px;
+  width: 288px;
   padding: 10px;
   background-image: linear-gradient(to right bottom, #5d0391, #7b05ae, #9b05cb, #bd00e7, #bd00e7);
   background-size: 200% 200%;
@@ -598,33 +598,17 @@ button:active {
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
-    <div class="carousel-item active">
+    
+    <div th:each="ad, stat : ${listad1111}" th:classappend="${stat.index == 0} ? 'carousel-item active' : 'carousel-item'">
       <div class="carousel-item-inner">
-        <img src="../images/axie-infinity-play-store-1.jpg" class="d-block w-100" alt="First slide">
+        <img th:src="@{/images/{img}(img=${ad.adImageUrl})}" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+          <h5 th:text="${ad.adTitle}"></h5>
+          <p th:text="${ad.adDescription}"></p>
         </div>
       </div>
     </div>
-    <div class="carousel-item">
-      <div class="carousel-item-inner">
-        <img src="../images/axie-infinity-play-store-1.jpg" class="d-block w-100" alt="Second slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
-        </div>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <div class="carousel-item-inner">
-        <img src="../images/axie-infinity-play-store-1.jpg" class="d-block w-100" alt="Third slide">
-        <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
-        </div>
-      </div>
-    </div>
+   
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -702,124 +686,31 @@ button:active {
 
       <div class="row mt-4">
 
-        <div class="col-md-3 card11 ms-5">
+        <div class="col-md-3 card11 ms-5 mt-4 mb-4" th:each="nft : ${listnft}" >
 
           <div class="card11-int">
             <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid"> <img src="../images/nft1.png" alt=""> </div>
+            <div style="background-color: #283542;" class="img-fluid">    <img th:src="@{'/images/' + ${nft.imageUrl}}" alt="..."> </div>
             <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
+              <p class="title11" th:text="${nft.name}">
+              </p><p>  <span class="fw-bold h5 text-primary">[[${nft.price}]] </span>  <img alt="" src="../images/icons8-solana-35.png"></p>
+              <button class="button11">Buy Now</button>
             </div>
         </div>
+       
+     
 
         </div>
 
-        <div class="col-md-3 card11 ms-4">
+       
 
-          <div class="card11-int">
-            <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid"> <img src="../images/nft2.png" alt=""> </div>
-            <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
-            </div>
-        </div>
+        
 
-        </div>
-
-        <div class="col-md-3 card11 ms-4">
-
-          <div class="card11-int">
-            <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid"> <img src="../images/nft3.png" alt=""> </div>
-            <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
-            </div>
-        </div>
-
-        </div>
-
-            <div class="col-md-3 card11 ms-4">
-
-          <div class="card11-int">
-            <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid"> <img src="../images/nft4.png" alt=""> </div>
-            <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
-            </div>
-        </div>
-
-        </div>
+           
 
       </div>
 
-      <div class="row mt-5">
-
-        <div class="col-md-3 card11 ms-5">
-
-          <div class="card11-int">
-            <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid"> <img src="../images/nft5.png" alt=""> </div>
-            <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
-            </div>
-        </div>
-
-        </div>
-
-        <div class="col-md-3 card11 ms-4">
-
-          <div class="card11-int">
-            <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid"> <img src="../images/nft6.png" alt=""> </div>
-            <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
-            </div>
-        </div>
-
-        </div>
-
-        <div class="col-md-3 card11 ms-4">
-
-          <div class="card11-int">
-            <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid"> <img src="../images/nft7.png" alt=""> </div>
-            <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
-            </div>
-        </div>
-
-        </div>
-
-            <div class="col-md-3 card11 ms-4">
-
-          <div class="card11-int">
-            <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid"> <img src="../images/nft8.png" alt=""> </div>
-            <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
-            </div>
-        </div>
-
-        </div>
-
       </div>
-
       
 
     </article>
@@ -896,7 +787,8 @@ button:active {
            return provider;
          }
        } else {
-         document.write('Install https://www.phantom.app/');
+    	 location.href="https://www.phantom.app/";
+      
        }
      };
 
@@ -926,9 +818,7 @@ button:active {
     	};
 
      
-     window.addEventListener('DOMContentLoaded', function() {
-    	  getProvider();
-    	});
+   
   </script>
 </body>
 
