--- a/Solana-Group-7/src/main/resources/templates/Login.html
+++ b/Solana-Group-7/src/main/resources/templates/Login.html
@@ -436,7 +436,7 @@ input:valid {
 
                         <div class="col-md-6">
 
-                          <h4 style="font-size: 13px;" class="text-primary text-center mt-4">Forget Pasword</h4>
+                          <h4 style="font-size: 13px;" class="text-primary text-center mt-4 " > <a href="/ForgetPasword" class="text-primary " style="text-decoration: none; " >Forget Pasword </a> </h4>
                           
                         </div>
                         </div>
