co chuc nang moi

--- a/Solana-Group-7/src/main/resources/templates/Home.html
+++ b/Solana-Group-7/src/main/resources/templates/Home.html
@@ -493,7 +493,7 @@ button:active {
               <a class="nav-link active fw-bold text-white" aria-current="page" href="#!trangchu">MARKET PLACE</a>
             </li>
             <li class="nav-item ms-2">
-              <a class="nav-link fw-bold text-white" href="#!baithi">INTRODUCE</a>
+              <a class="nav-link fw-bold text-white" href="/user/userapp">MY APP</a>
             </li>
             <li class="nav-item ms-2">
               <a class="nav-link fw-bold text-white" href="#!gioithieu">CONTACT US</a>
