--- a/Solana-Group-7/src/main/resources/templates/SignUp2.html
+++ b/Solana-Group-7/src/main/resources/templates/SignUp2.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Sign Up real</title>
     <link rel="icon" type="image/x-icon" href="/images/icons8-nft-38.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -484,13 +484,34 @@
                     <div class="col-12 mt-5 ">
                         <p class=" text-white ">Or Sign-Up With Email</p>
                         <hr >
-                        <form action="/signup/do"  method="POST">
+                        <form action="/signup/newacc"  method="POST">
                         <div class="p-5 pt-0">
                             <div class="mb-3 ">
                                 <label for="exampleFormControlInput1" class="form-label text-center text-white">Your Email</label>
-                                <input    type="text" name="mail" class="form-control input text-white" id="exampleFormControlInput1"
+                                <input  th:value="${mail}"    type="text" name="mail" class="form-control input text-white" id="exampleFormControlInput1"
+                                   >
+                                  
+                                     
+                            </div>
+                                <div class="mb-3 ">
+                                <label for="exampleFormControlInput1" class="form-label text-center text-white">Your User Name</label>
+                                <input    type="text" name="username" class="form-control input text-white" id="exampleFormControlInput1"
                                     placeholder="abc@gmail.com ">
-                                    <div class="text-danger"  th:text="${error}"> </div>
+                                   
+                                     
+                            </div>
+                                <div class="mb-3 ">
+                                <label for="exampleFormControlInput1" class="form-label text-center text-white">Your FullName</label>
+                                <input    type="text" name="fullname" class="form-control input text-white" id="exampleFormControlInput1"
+                                    placeholder="abc@gmail.com ">
+                                  
+                                     
+                            </div>
+                                <div class="mb-3 ">
+                                <label for="exampleFormControlInput1" class="form-label text-center text-white">Your Password</label>
+                                <input    type="text" name="password" class="form-control input text-white" id="exampleFormControlInput1"
+                                    placeholder="abc@gmail.com ">
+                                  
                                      
                             </div>
                         
