--- a/Solana-Group-7/src/main/resources/templates/myCoin.html
+++ b/Solana-Group-7/src/main/resources/templates/myCoin.html
@@ -463,7 +463,7 @@ input:valid {
           </ul>
 	
           <form method="get" action=""  class="d-flex">
-            <div  th:if="${ #strings.isEmpty(login)}"  id="pulsa" class="pulsa me-lg-5">
+            <div  th:if="${ #strings.isEmpty(session.Login)}"  id="pulsa" class="pulsa me-lg-5">
               <button formaction="/login" id="cta" class="cta">
                 Login <div class="star a"></div>
               <div class="star b"></div>
@@ -478,7 +478,7 @@ input:valid {
             </div>
             
             
-             <div th:if="${not #strings.isEmpty(login)}" id="pulsa" class="pulsa me-lg-5">
+             <div th:if="${not #strings.isEmpty(session.Login)}" id="pulsa" class="pulsa me-lg-5">
               <button formaction="/logout" id="cta" class="cta">
                 Log Out <div class="star a"></div>
               <div class="star b"></div>
@@ -494,7 +494,7 @@ input:valid {
             
             
             
-             <div th:if="${login != null && login.role.contains('Admin')}" id="pulsa" class="pulsa me-lg-5">
+             <div th:if="${session.Login != null && session.Login.role.contains('Admin')}" id="pulsa" class="pulsa me-lg-5">
   <button formaction="/admin" id="cta" class="cta">
     App
     <div class="star a"></div>
@@ -519,7 +519,7 @@ input:valid {
             
           </form>
           <div  class="d-flex">
-          <div th:if="${login != null && #strings.isEmpty(login.walletAddress)}"  id="pulsa" class="pulsa me-lg-5">
+          <div th:if="${session.Login != null && #strings.isEmpty(session.Login.walletAddress)}"  id="pulsa" class="pulsa me-lg-5">
               <button onclick="connectToWallet()" id="cta" class="cta">
                 Connect <div class="star a"></div>
               <div class="star b"></div>
